# mini_renderer

./: CMakeLists.txt  README.md  run_all.sh
include/: bezier.hpp  bitmap_image.hpp  camera.hpp  cube_map.hpp  group.hpp  hit.hpp  image.hpp  kdtree.hpp  light.hpp  material.hpp  mesh.hpp  noise.hpp  object3d.hpp  octree.hpp  perlin_noise.hpp  plane.hpp  ray.hpp  render.hpp  scene_parser.hpp  simple_method.hpp  sphere.hpp  texture.hpp  transform.hpp  triangle.hpp
src/: bezier.cpp  image.cpp  kdtree.cpp  main.cpp  mesh.cpp  octree.cpp  perlin_noise.cpp  render.cpp  scene_parser.cpp
testcases/: Final_scene0.txt  Final_scene1.txt  Final_scene2.txt
